--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
  :root {
-  --foreground: #ededed;
+  --foreground: #fafbfc;
   --background: #0a0a0a;
  }
 }
